fix bugs:   * pricing table allow entering quantities lower than previous     row's quantity   * image picker button overflowing on selecting files with large   filenames

--- a/src/app/components/image-picker-form/image-picker-form.component.scss
+++ b/src/app/components/image-picker-form/image-picker-form.component.scss
@@ -51,6 +51,7 @@
       .p-fileupload {
         .p-button {
           max-width: 150px;
+          max-height: 36px;
 
           &.p-fileupload-choose {
             font-size: 0.875rem;
